crates/test-ui/ui/array_iter_invalid.stderr
error[E0277]: `&mut Retained<NSArray<NSArray>>` is not an iterator
 --> ui/array_iter_invalid.rs
  |
  |     for s in &mut arr {
  |              ^^^^^^^^ `&mut Retained<NSArray<NSArray>>` is not an iterator
  |
  = help: the trait `Iterator` is not implemented for `Retained<NSArray<NSArray>>`, which is required by `&mut Retained<NSArray<NSArray>>: IntoIterator`
  = note: required for `&mut Retained<NSArray<NSArray>>` to implement `Iterator`
  = note: required for `&mut Retained<NSArray<NSArray>>` to implement `IntoIterator`
help: consider removing the leading `&`-reference
  |
6 -     for s in &mut arr {
6 +     for s in arr {
  |

error[E0277]: `&mut Retained<NSArray<NSMutableArray>>` is not an iterator
 --> ui/array_iter_invalid.rs
  |
  |     for s in &mut arr {
  |              ^^^^^^^^ `&mut Retained<NSArray<NSMutableArray>>` is not an iterator
  |
  = help: the trait `Iterator` is not implemented for `Retained<NSArray<NSMutableArray>>`, which is required by `&mut Retained<NSArray<NSMutableArray>>: IntoIterator`
  = note: required for `&mut Retained<NSArray<NSMutableArray>>` to implement `Iterator`
  = note: required for `&mut Retained<NSArray<NSMutableArray>>` to implement `IntoIterator`
help: consider removing the leading `&`-reference
  |
11 -     for s in &mut arr {
11 +     for s in arr {
   |

error[E0277]: `&mut Retained<NSMutableArray<NSArray>>` is not an iterator
 --> ui/array_iter_invalid.rs
  |
  |     for s in &mut arr {
  |              ^^^^^^^^ `&mut Retained<NSMutableArray<NSArray>>` is not an iterator
  |
  = help: the trait `Iterator` is not implemented for `Retained<NSMutableArray<NSArray>>`, which is required by `&mut Retained<NSMutableArray<NSArray>>: IntoIterator`
  = note: required for `&mut Retained<NSMutableArray<NSArray>>` to implement `Iterator`
  = note: required for `&mut Retained<NSMutableArray<NSArray>>` to implement `IntoIterator`
help: consider removing the leading `&`-reference
  |
16 -     for s in &mut arr {
16 +     for s in arr {
   |

error[E0277]: `&mut Retained<NSMutableArray<NSMutableArray>>` is not an iterator
 --> ui/array_iter_invalid.rs
  |
  |     for s in &mut arr {
  |              ^^^^^^^^ `&mut Retained<NSMutableArray<NSMutableArray>>` is not an iterator
  |
  = help: the trait `Iterator` is not implemented for `Retained<NSMutableArray<NSMutableArray>>`, which is required by `&mut Retained<NSMutableArray<NSMutableArray>>: IntoIterator`
  = note: required for `&mut Retained<NSMutableArray<NSMutableArray>>` to implement `Iterator`
  = note: required for `&mut Retained<NSMutableArray<NSMutableArray>>` to implement `IntoIterator`
help: consider removing the leading `&`-reference
  |
21 -     for s in &mut arr {
21 +     for s in arr {
   |
